--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,7 +1,7 @@
 // bootstrap
 //@import "~bootstrap/scss/bootstrap";
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 * {
 	box-sizing: border-box;
@@ -12,7 +12,7 @@
 }
 
 html {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	-webkit-text-size-adjust: 100%;
 }
 
