--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -23,67 +23,72 @@ html {
 	width: 100vw;
 	height: 100vh;
 
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: center;
-	align-content: stretch;
+	padding-top: 5em;
 
-	#hero-logo {
-		transform: translatey(0px);
-		animation: float 6s ease-in-out infinite;
-	}
+	display: flex;
+	flex: 1 1 0;
+	flex-flow: column nowrap;
+	place-content: stretch space-between;
+	align-items: center;
 
 	#hero-inner {
-		height: 100%;
 		display: flex;
+		flex-grow: 1;
+
 		flex-direction: column;
 		flex-wrap: nowrap;
-		justify-content: center;
-		align-items: center;
 		align-content: stretch;
+		align-items: center;
+		justify-content: center;
 
-		#hidden-title {
-			position: absolute;
-			visibility: hidden;
-		}
-
-		h2, h3, h4 {
-			margin: 0;
-		}
-
-		h2 {
-			font-size: 3rem;
-			margin-bottom: 0.4rem;
-		}
-
-		h3 {
-			font-size: 1.75rem;
-		}
-
-		h4 {
-			font-size: 1.2rem;
+		#hero-logo {
+			transform: translatey(0px);
+			animation: float 6s ease-in-out infinite;
 		}
 
 		#hero-spacer {
-			height: 4em;
-			// TODO remove on lg?
+			margin: 1em auto;
 		}
 
 		#hero-right {
 			font-family: cooper-black-std, sans-serif;
 			text-shadow: -2px 0 $cooper-border, 0 2px $cooper-border, 2px 0 $cooper-border, 0 -2px $cooper-border;
 			text-align: center;
+
+			#hidden-title {
+				position: absolute;
+				visibility: hidden;
+			}
+
+			h2, h3, h4 {
+				margin: 0;
+			}
+
+			h2 {
+				font-size: 3rem;
+				margin-bottom: 0.4rem;
+			}
+
+			h3 {
+				font-size: 1.75rem;
+			}
+
+			h4 {
+				font-size: 1.3rem;
+			}
 		}
 	}
 
 	img {
-		width: 100%;
+		//width: 100%;
+		max-width: 100%;
+		max-height: 450px;
 	}
 
 	#scroll-indicator {
-		height: 8rem;
+		flex: 0 0 auto;
+		height: 20vh;
+		padding-top: 2em;
 	}
 }
 
@@ -153,6 +158,7 @@ main {
 		h3 {
 			margin-top: 0;
 			margin-bottom: 0;
+			font-weight: normal;
 		}
 
 		#icon {
